WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241595
Nullptr crash in RenderLayerCompositor::requiresCompositingLayer
https://bugs.webkit.org/show_bug.cgi?id=241595
Summary
Nullptr crash in RenderLayerCompositor::requiresCompositingLayer
Antti Koivisto
Reported
2022-06-14 06:51:53 PDT
from crash reports
Attachments
Patch
(1.33 KB, patch)
2022-06-14 07:02 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2022-06-14 06:52:26 PDT
rdar://88854150
Antti Koivisto
Comment 2
2022-06-14 07:02:04 PDT
Created
attachment 460231
[details]
Patch
EWS
Comment 3
2022-06-14 11:11:09 PDT
Committed
r295531
(
251536@main
): <
https://commits.webkit.org/251536@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 460231
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug