Cherry-pick 9302737d9d8f. rdar://problem/88854150

Nullptr crash in RenderLayerCompositor::requiresCompositingLayer
    https://bugs.webkit.org/show_bug.cgi?id=241595
    <rdar://88854150>

    Reviewed by Simon Fraser.

    * Source/WebCore/rendering/RenderLayerCompositor.cpp:
    (WebCore::RenderLayerCompositor::requiresCompositingLayer const):

    Add a null check. In -webkit-box-reflect case it is not clear renderer.layer() can't be null.

    Canonical link: https://commits.webkit.org/251536@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295531 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.703@safari-613-branch